--- a/bootstrap/values.yaml
+++ b/bootstrap/values.yaml
@@ -1,109 +1,10 @@
 # Default values for bootstrap chart
-# This chart creates the bootstrap Application and dynamic ApplicationSets
+# This chart creates the bootstrap Application (app-of-apps parent)
 
 bootstrap:
   # Git repository URL
   repoURL: https://github.com/rhpds/private-llmaas-multitenant
   # Branch or tag to use
   targetRevision: taylor-testing
-  # Path to applications folder
+  # Path to applications Helm chart (managed by the bootstrap Application)
   path: applications
-
-# User configuration (from AgnosticV)
-user:
-  count: 2
-  prefix: user
-
-# Workspace configuration (from AgnosticV)
-workspace:
-  git:
-    url: https://github.com/rhpds/private-llmaas-multitenant
-    revision: taylor-testing
-    path: deployments/workspace
-  devworkspace:
-    # name will be auto-generated as llmaas-{username} if not specified
-    devfile: http://devspaces-dashboard.openshift-devspaces.svc.cluster.local:8080/dashboard/api/editors/devfile?che-editor=che-incubator/che-code/latest
-    projects:
-      repoUrl: https://github.com/taylorjordanNC/coding-exercises
-      revision: main
-    components:
-      - name: tooling
-        container:
-          image: registry.redhat.io/devspaces/udi-rhel9:3.21
-          sourceMapping: /projects
-
-# Slack MCP Secret configuration (from AgnosticV)
-slackMcpSecret:
-  namespace: lls-demo
-  name: slack-secret
-  slackBotToken: ""
-  slackTeamId: ""
-  graniteToken: ""
-  llamaToken: ""
-
-# Llama Stack Instance configuration (from AgnosticV)
-llamaStackInstance:
-  repoURL: https://github.com/rhpds/private-llmaas-multitenant
-  targetRevision: taylor-testing
-  path: deployments/llama-stack-instance
-  granite:
-    modelName: granite-3dot2-8b-instruct
-    endpoint: "http://maas.apps.ocp.w2mmc.sandbox5295.opentlc.com/llm/granite-3dot2-8b-instruct"
-    apiToken: "vhSjFEQo5hncP8KYxQPy"
-    tlsverify: true
-  llamaguard:
-    modelName: llama-guard-3-1b
-    endpoint: "http://maas.apps.ocp.w2mmc.sandbox5295.opentlc.com/llm/llama-guard-3-1b"
-    apiToken: "vhSjFEQo5hncP8KYxQPy"
-    tlsverify: true
-  mcp:
-    openshiftServerUrl: http://ocp-mcp-server.lls-demo.svc.cluster.local:8000/sse
-    slackServerUrl: http://slack-mcp-server.lls-demo.svc.cluster.local:80/sse
-
-# Kubernetes MCP Server configuration
-kubernetesMcpServer:
-  repoURL: https://github.com/rhpds/private-llmaas-multitenant
-  targetRevision: taylor-testing
-  path: deployments/kubernetes-mcp-server
-  namespace: lls-demo
-
-# Llama Stack Operator configuration
-llamaStackOperator:
-  repoURL: https://github.com/rhpds/private-llmaas-multitenant
-  targetRevision: taylor-testing
-  path: llama-stack-operator
-  namespace: llama-stack-k8s-operator-controller-manager
-  image: quay.io/eformat/llama-stack-k8s-operator:v0.3.0
-
-# Llama Stack Shared configuration
-llamaStackShared:
-  repoURL: https://github.com/rhpds/private-llmaas-multitenant
-  targetRevision: taylor-testing
-  path: deployments/llama-stack
-  namespace: lls-demo
-
-# Slack MCP Server configuration
-slackMcp:
-  repoURL: https://github.com/rhpds/private-llmaas-multitenant
-  targetRevision: taylor-testing
-  path: deployments/slack-mcp
-  namespace: lls-demo
-
-# NVIDIA GPU Enablement configuration
-nvidiaGpuEnablement:
-  repoURL: https://github.com/rhpds/private-llmaas-multitenant
-  targetRevision: taylor-testing
-  path: deployments/nvidia-gpu-enablement
-  namespace: default
-  syncWave: "2"
-  retryLimit: 10
-  retryBackoffDuration: 10s
-  retryBackoffFactor: 3
-  retryBackoffMaxDuration: 30m
-
-# OpenShift AI configuration
-openshiftAi:
-  repoURL: https://github.com/rhpds/private-llmaas-multitenant
-  targetRevision: taylor-testing
-  path: deployments/openshift-ai
-  namespace: redhat-ods-operator
