--- a/deployments/workspace/values.yaml
+++ b/deployments/workspace/values.yaml
@@ -3,7 +3,7 @@
 # Declare variables to be passed into your templates.
 
 username: user1
-namespace: wksp
+namespacePrefix: wksp
 
 devworkspace:
   name: exercises
