--- a/bootstrap/templates/slack-mcp.yaml
+++ b/bootstrap/templates/slack-mcp.yaml
@@ -7,8 +7,8 @@ metadata:
 spec:
   project: default
   source:
-    repoURL: https://github.com/rhpds/private-llmaas-multitenant
-    targetRevision: taylor-testing
+    repoURL: {{ .Values.bootstrap.repoURL}}
+    targetRevision: {{ .Values.bootstrap.targetRevision }}
     path: deployments/slack-mcp
   destination:
     server: https://kubernetes.default.svc
