--- a/bootstrap/values.yaml
+++ b/bootstrap/values.yaml
@@ -1,61 +1,20 @@
 # Default values for bootstrap chart
-# This chart creates the bootstrap Application and dynamic ApplicationSets
+# This chart creates the bootstrap Application (app-of-apps parent)
 
 bootstrap:
   # Git repository URL
   repoURL: https://github.com/rhpds/private-llmaas-multitenant
   # Branch or tag to use
   targetRevision: taylor-testing
-  # Path to applications folder
-  path: applications
 
-# User configuration (from AgnosticV)
 user:
-  count: 2
+  count: 5
   prefix: user
 
-# Workspace configuration (from AgnosticV)
-workspace:
-  git:
-    url: https://github.com/rhpds/private-llmaas-multitenant
-    revision: taylor-testing
-    path: deployments/workspace
-  devworkspace:
-    # name will be auto-generated as llmaas-{username} if not specified
-    devfile: http://devspaces-dashboard.openshift-devspaces.svc.cluster.local:8080/dashboard/api/editors/devfile?che-editor=che-incubator/che-code/latest
-    projects:
-      repoUrl: https://github.com/taylorjordanNC/coding-exercises
-      revision: main
-    components:
-      - name: tooling
-        container:
-          image: registry.redhat.io/devspaces/udi-rhel9:3.21
-          sourceMapping: /projects
-
-# Slack MCP Secret configuration (from AgnosticV)
 slackMcpSecret:
-  namespace: lls-demo
-  name: slack-secret
-  slackBotToken: ""
-  slackTeamId: ""
-  graniteToken: ""
-  llamaToken: ""
+  slackBotToken: "xoxb-your-token"
+  slackTeamId: "T0000000000"
 
-# Llama Stack Instance configuration (from AgnosticV)
-llamaStackInstance:
-  repoURL: https://github.com/rhpds/private-llmaas-multitenant
-  targetRevision: taylor-testing
-  path: deployments/llama-stack-instance
-  granite:
-    modelName: granite-3dot2-8b-instruct
-    endpoint: "http://maas.apps.ocp.w2mmc.sandbox5295.opentlc.com/llm/granite-3dot2-8b-instruct"
-    apiToken: "vhSjFEQo5hncP8KYxQPy"
-    tlsverify: true
-  llamaguard:
-    modelName: llama-guard-3-1b
-    endpoint: "http://maas.apps.ocp.w2mmc.sandbox5295.opentlc.com/llm/llama-guard-3-1b"
-    apiToken: "vhSjFEQo5hncP8KYxQPy"
-    tlsverify: true
-  mcp:
-    openshiftServerUrl: http://ocp-mcp-server.lls-demo.svc.cluster.local:8000/sse
-    slackServerUrl: http://slack-mcp-server.lls-demo.svc.cluster.local:80/sse
+deployer:
+  apiUrl: https://api.cluster-guid.sandbox.opentlc.com:6443
+  domain: apps.cluster-guid.sandbox.opentlc.com
