--- a/deployments/devspaces/templates/subscription.yaml
+++ b/deployments/devspaces/templates/subscription.yaml
@@ -2,12 +2,12 @@
 apiVersion: operators.coreos.com/v1alpha1
 kind: Subscription
 metadata:
-  name: openshift-devspaces
-  annotations:
-    argocd.argoproj.io/sync-wave: "0"
+  name: devspaces
+  namespace: openshift-operators
 spec:
   channel: {{ .Values.channel }}
   installPlanApproval: Automatic
-  name: openshift-devspaces
+  name: devspaces
   source: redhat-operators
   sourceNamespace: openshift-marketplace
+  #startingCSV: csv version
