--- a/deployments/workspace/templates/namespace.yaml
+++ b/deployments/workspace/templates/namespace.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: {{ .Values.namespace }}-{{ .Values.username }}
+  name: {{ .Values.namespacePrefix }}-{{ .Values.username }}
   labels:
     app.kubernetes.io/part-of: che.eclipse.org
     app.kubernetes.io/component: workspaces-namespace
