fix checkcluster file to add skipdryrunonmissingresource annotation for argo, add values for dashboardconfig, modelserversizes and notebooksizes in openshift AI custom values.yaml file. Remove namespace files

--- a/deployments/openshift-ai/values.yaml
+++ b/deployments/openshift-ai/values.yaml
@@ -38,3 +38,15 @@ components:
     managementState: Removed
 
 dataScienceClusterInitialization: null
+
+dashboardConfig:
+   disableModelRegistry: false
+   disableModelCatalog: false
+   disableKServeMetrics: false
+   genAiStudio: true
+   modelAsService: true
+   disableLMEval: false
+
+modelServerSizes: null
+
+notebookSizes: null
