--- a/deployments/devspaces/templates/checluster.yaml
+++ b/deployments/devspaces/templates/checluster.yaml
@@ -4,6 +4,8 @@ kind: CheCluster
 metadata:
   name: devspaces
   namespace: {{ .Release.Namespace }}
+  annotations:
+    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
 spec:
   components: {}
   networking: {}
