--- a/bootstrap/templates/gitops.yaml
+++ b/bootstrap/templates/gitops.yaml
@@ -4,5 +4,7 @@ kind: ArgoCD
 metadata:
   name: openshift-gitops
   namespace: openshift-gitops
+  finalizers:
+    - resources-finalizer.argocd.argoproj.io
 spec:
   resourceTrackingMethod: annotation
