--- a/bootstrap/templates/nvidia-gpu-enablement.yaml
+++ b/bootstrap/templates/nvidia-gpu-enablement.yaml
@@ -3,6 +3,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: nvidia-gpu-enablement
+  namespace: openshift-gitops
   finalizers:
     - resources-finalizer.argocd.argoproj.io
 spec:
