--- a/bootstrap/templates/applicationset-llama-stack-instance.yaml
+++ b/bootstrap/templates/applicationset-llama-stack-instance.yaml
@@ -7,16 +7,18 @@ metadata:
   namespace: openshift-gitops
 spec:
   generators:
-  - list:
-      elements:
-{{- $userCount := int .Values.user.count }}
-{{- range $index := until $userCount }}
-      - user: {{ $.Values.user.prefix }}{{ add $index 1}}
-{{- end }}
+    - list:
+        elements:
+        {{- $userCount := int .Values.user.count }}
+        {{- range $index := until $userCount }}
+          - user: {{ $.Values.user.prefix }}{{ add $index 1}}
+        {{- end }}
   template:
     metadata:
       name: llama-stack-instance-{{- "{{" }} user {{- " }}" }}
       namespace: openshift-gitops
+      finalizers:
+        - resources-finalizer.argocd.argoproj.io
     spec:
       project: default
       source:
