--- a/bootstrap/templates/devspaces.yaml
+++ b/bootstrap/templates/devspaces.yaml
@@ -2,6 +2,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: devspaces
+  namespace: openshift-gitops
   finalizers:
     - resources-finalizer.argocd.argoproj.io
 spec:
