--- a/bootstrap/templates/slack-mcp.yaml
+++ b/bootstrap/templates/slack-mcp.yaml
@@ -4,6 +4,8 @@ kind: Application
 metadata:
   name: slack-mcp
   namespace: openshift-gitops
+  finalizers:
+    - resources-finalizer.argocd.argoproj.io
 spec:
   project: default
   source:
@@ -11,7 +13,7 @@ spec:
     targetRevision: {{ .Values.bootstrap.targetRevision }}
     path: deployments/slack-mcp
   destination:
-    server: https://kubernetes.default.svc
+    server: in-cluster
     namespace: lls-demo
   syncPolicy:
     automated: {}
