fix: patch the cert name for gateway

--- a/bootstrap/templates/models-as-a-service.yaml
+++ b/bootstrap/templates/models-as-a-service.yaml
@@ -27,6 +27,9 @@ spec:
             - op: replace
               path: /spec/listeners/1/hostname
               value: maas.{{ .Values.deployer.domain }}
+            - op: replace
+              path: /spec/listeners/1/tls/certificateRefs/0/name
+              value: cert-manager-ingress-cert
   syncPolicy:
     automated:
       prune: true
