--- a/bootstrap/templates/models.yaml
+++ b/bootstrap/templates/models.yaml
@@ -4,6 +4,8 @@ kind: Application
 metadata:
   name: models
   namespace: openshift-gitops
+  annotations:
+    argocd.argoproj.io/sync-wave: "1"
   finalizers:
     - resources-finalizer.argocd.argoproj.io
 spec:
