switch slack deployment to use up-to-date maintained slack-mcp-server image and update variables

--- a/deployments/slack-mcp/Chart.yaml
+++ b/deployments/slack-mcp/Chart.yaml
@@ -9,4 +9,5 @@ keywords:
   - model-context-protocol
   - slack
 maintainers:
-  - name: Red Hat AI BU
+  - name: Taylor Smith
+    email: tasmith@redhat.com
