--- a/deployments/slack-mcp/templates/deployment.yaml
+++ b/deployments/slack-mcp/templates/deployment.yaml
@@ -21,6 +21,10 @@ spec:
         ports:
         - containerPort: {{ .Values.service.targetPort }}
           protocol: TCP
+        command: ["mcp-server"]
+        args:
+        - --transport
+        - http
         env:
         - name: SLACK_MCP_PORT
           value: {{ quote .Values.service.targetPort }}
