Revert "updated genai playground to point to new endpoint for slack-mcp-server"
This reverts commit a4de7e7d373343baafcd0445e82bac9c02a80168.

--- a/bootstrap/templates/extra-resources/mcp-config.yaml
+++ b/bootstrap/templates/extra-resources/mcp-config.yaml
@@ -11,6 +11,6 @@ data:
     }
   Slack-MCP-Server: |
     {
-      "url": "http://slack-mcp-server.lls-demo.svc.cluster.local/sse",
+      "url": "http://slack-mcp-server.lls-demo.svc.cluster.local/mcp",
       "description": "An MCP server for interacting with our workshop Slack instance."
     }
