changing model to Qwen for tool-calling performance improvement

--- a/deployments/models/values.yaml
+++ b/deployments/models/values.yaml
@@ -1,9 +1,9 @@
 image: registry.redhat.io/rhaiis/vllm-cuda-rhel9:3.2.5
 
 models:
-  - name: granite-3dot3-8b-instruct
-    displayName: Granite 3.3 8B Instruct
-    uri: oci://quay.io/redhat-ai-services/modelcar-catalog:granite-3.3-8b-instruct
+  - name: qwen3-14b-fp8
+    displayName: Qwen3 14B FP8
+    uri: oci://quay.io/jharmison/models:qwen--qwen3-14b-fp8-modelcar
     resources:
       limits:
         cpu: "6"
@@ -15,8 +15,7 @@ models:
         nvidia.com/gpu: "1"
     extraArgs:
       - --enable-auto-tool-choice
-      - --tool-call-parser=granite
-      - --chat-template=/opt/app-root/template/tool_chat_template_granite.jinja
+      - --tool-call-parser=hermes
     tolerations:
       - effect: NoSchedule
         key: nvidia.com/gpu
