--- a/bootstrap/templates/llama-stack-instance.yaml
+++ b/bootstrap/templates/llama-stack-instance.yaml
@@ -1,4 +1,3 @@
-{{- if .Values.llamaStackInstance }}
 ---
 apiVersion: argoproj.io/v1alpha1
 kind: ApplicationSet
@@ -14,36 +13,24 @@ spec:
         {{- end }}
   template:
     metadata:
-      name: llama-stack-instance-{{- "{{" }} user {{- " }}" }}
+      name: llama-stack-instance-{{ `{{ user }}` }}
       namespace: openshift-gitops
       finalizers:
         - resources-finalizer.argocd.argoproj.io
     spec:
       project: default
       source:
-        repoURL: {{ .Values.llamaStackInstance.repoURL }}
-        targetRevision: {{ .Values.llamaStackInstance.targetRevision }}
-        path: {{ .Values.llamaStackInstance.path }}
+        repoURL: {{ .Values.bootstrap.repoURL }}
+        targetRevision: {{ .Values.bootstrap.targetRevision }}
+        path: deployments/llama-stack-instance
         helm:
           values: |
-            username: '{{ `{{ user }}` }}'
-            granite:
-              modelName: {{ .Values.llamaStackInstance.granite.modelName }}
-              endpoint: {{ .Values.llamaStackInstance.granite.endpoint }}
-              apiToken: {{ .Values.llamaStackInstance.granite.apiToken }}
-              tlsverify: {{ .Values.llamaStackInstance.granite.tlsverify }}
-            llamaguard:
-              modelName: {{ .Values.llamaStackInstance.llamaguard.modelName }}
-              endpoint: {{ .Values.llamaStackInstance.llamaguard.endpoint }}
-              apiToken: {{ .Values.llamaStackInstance.llamaguard.apiToken }}
-              tlsverify: {{ .Values.llamaStackInstance.llamaguard.tlsverify }}
-            mcp:
-              openshiftServerUrl: {{ .Values.llamaStackInstance.mcp.openshiftServerUrl }}
-              slackServerUrl: {{ .Values.llamaStackInstance.mcp.slackServerUrl }}
+            deployer:
+              domain: {{ .Values.deployer.domain }}
       destination:
         name: in-cluster
+        namespace: wksp-{{ `{{ user }}` }}
       syncPolicy:
-        automated: {}
-        syncOptions:
-          - CreateNamespace=true
-{{- end }}
+        automated:
+          prune: true
+          selfHeal: true
